--- a/tank/package.json
+++ b/tank/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
+    "sass": "^1.69.7",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.202",
+    "lodash": "^4.17.21"
   }
 }
