--- a/tank/tsconfig.json
+++ b/tank/tsconfig.json
@@ -17,7 +17,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    /* 配置这个看是否能读取环境变量 */
+    "esModuleInterop":true
   },
   "include": ["src"]
 }
